test/success/integration/_succ_cond_1.hs
x :: Int
x = if True then 1 else 2
main = print "hello"