test/fail/integration/_fail_sem_cond_1.hs
x :: Int
x = if 3 then 1 else 2
main = print "hello"